--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "brow-dev",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "main": "src/main.js",
   "scripts": {
-    "start": "electron .",
+    "sync-version": "node scripts/updateVersion.js",
+    "start": "npm run sync-version && electron .",
     "dev": " NODE_ENV=development electron .",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "electron-builder"
@@ -23,6 +24,7 @@
     "electron-nightly": "^37.0.0-nightly.20250417"
   },
   "dependencies": {
-    "env": "^0.0.2"
+    "env": "^0.0.2",
+    "keytar": "^7.9.0"
   }
 }
